cncProd/force-app/main/default/objects/Vehicle_Request__c/Vehicle_Request__c.object-meta.xml
<CustomObject>
    <description>Request for Test Drive, Loan, Maintainance</description>
    <label>Vehicle Request</label>
    <nameField>
        <displayFormat>VR-{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>