cncProd/force-app/main/default/objects/Vehicle_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Requests (Account)</relationshipLabel>
    <relationshipName>Vehicle_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>