cncProd/force-app/main/default/objects/Vehicle_Request__c/fields/Check_In__c.field-meta.xml
<CustomField>
    <fullName>Check_In__c</fullName>
    <label>Check-In</label>
    <type>DateTime</type>
</CustomField>