cncProd/force-app/main/default/objects/Vehicle_Request__c/fields/Current_Own_Car_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Current_Own_Car_Registration_No__c</fullName>
    <label>Current Own Car Registration No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>