cncProd/force-app/main/default/objects/Vehicle_Request__c/fields/Customer_Signature__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature__c</fullName>
    <label>Customer Signature</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>