cncProd/force-app/main/default/objects/Vehicle_Request__c/fields/Intended_Loan_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Intended_Loan_Out_Date__c</fullName>
    <label>Intended Loan Out Date</label>
    <type>Date</type>
</CustomField>