cncProd/force-app/main/default/objects/Vehicle_Request__c/fields/Loan_Maintenance_Duration__c.field-meta.xml
<CustomField>
    <fullName>Loan_Maintenance_Duration__c</fullName>
    <label>Loan/Maintenance Duration (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>