cncProd/force-app/main/default/objects/Vehicle_Request__c/fields/Loan_Maintenance_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Maintenance_Person_Name__c</fullName>
    <label>Loan/Maintenance Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>