cncProd/force-app/main/default/objects/Vehicle_Request__c/fields/Maintenance_Reason__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Reason__c</fullName>
    <label>Maintenance Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Servicing</fullName>
            </value>
            <value>
                <fullName>Fuel top-up</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>