cncProd/force-app/main/default/objects/Vehicle_Request__c/fields/Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_No__c</fullName>
    <formula>Courtesy_Vehicle__r.Registration_No__c</formula>
    <label>Registration No</label>
    <type>Text</type>
</CustomField>