cncProd/force-app/main/default/objects/Vehicle_Request__c/fields/Test_Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Type__c</fullName>
    <label>Test Drive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test Drive</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>