cncProd/force-app/main/default/objects/Vehicle_Request__c/fields/Trade_Plate__c.field-meta.xml
<CustomField>
    <fullName>Trade_Plate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Plate</label>
    <referenceTo>Trade_Plate__c</referenceTo>
    <relationshipLabel>Vehicle Requests</relationshipLabel>
    <relationshipName>Vehicle_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>