cncProd/force-app/main/default/objects/Vehicle_Request__c/recordTypes/MB_Test_Drive_Request.recordType-meta.xml
<RecordType>
    <fullName>MB_Test_Drive_Request</fullName>
    <active>true</active>
    <label>MB Test Drive Request</label>
</RecordType>