cncProd/force-app/main/default/objects/Vehicle_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Courtesy_Vehicle__c</columns>
    <columns>Trade_Plate__c</columns>
    <columns>Account__c</columns>
    <columns>Check_Out__c</columns>
    <columns>Check_In__c</columns>
    <columns>Test_Drive_Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>